Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16888

Fix ptlrpc_gss automatic loading

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • 3
    • 9223372036854775807

      ptlrpc_gss kernel module is automatically loaded when a GSS security flavor is enforced. But this works only once, because loading success is stored in a static variable in the ptlrpc module. If ptlrpc_gss is manually unloaded, while keeping ptlrpc loaded, next mount attempt fails.

      mgs# lctl conf_param testfs.srpc.flavor.default.cli2mdt=krb5n
      client# mount -t lustre mgs@tcp:/testfs /mnt/testfs
      client# umount /mnt/testfs
      client# rmmod ptlrpc_gss
      client# mount -t lustre mgs@tcp:/testfs /mnt/testfs
      mount.lustre: mount mgs@tcp:/testfs at /mnt/testfs failed: Operation not permitted
      

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: